// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SansBold correctly for igbo 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SansBold correctly for news 1`] = `
"
   font-family: ReithSans, Helvetica, Arial, sans-serif;
   font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SansBold correctly for persian 1`] = `
"
    font-family: NassimPersian, Arial, Verdana, Geneva, Helvetica, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SansBold correctly for pidgin 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SansBold correctly for yoruba 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SansBoldItalic correctly for igbo 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: italic;
  "
`;

exports[`should render SansBoldItalic correctly for news 1`] = `
"
   font-family: ReithSans, Helvetica, Arial, sans-serif;
   font-weight: 700;
   font-style: italic;
  "
`;

exports[`should render SansBoldItalic correctly for persian 1`] = `
"
    font-family: NassimPersian, Arial, Verdana, Geneva, Helvetica, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SansBoldItalic correctly for pidgin 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: italic;
  "
`;

exports[`should render SansBoldItalic correctly for yoruba 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: italic;
  "
`;

exports[`should render SansItalic correctly for igbo 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 400;
   font-style: italic;
  "
`;

exports[`should render SansItalic correctly for news 1`] = `
"
   font-family: ReithSans, Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-style: italic; 
  "
`;

exports[`should render SansItalic correctly for persian 1`] = `
"
    font-family: NassimPersian, Arial, Verdana, Geneva, Helvetica, sans-serif;
    font-weight: 400;
   font-style: normal;
  "
`;

exports[`should render SansItalic correctly for pidgin 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 400;
   font-style: italic;
  "
`;

exports[`should render SansItalic correctly for yoruba 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 400;
   font-style: italic;
  "
`;

exports[`should render SansRegular correctly for igbo 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 400;
   font-style: normal;
  "
`;

exports[`should render SansRegular correctly for news 1`] = `
"
   font-family: ReithSans, Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-style: normal; 
  "
`;

exports[`should render SansRegular correctly for persian 1`] = `
"
    font-family: NassimPersian, Arial, Verdana, Geneva, Helvetica, sans-serif;
    font-weight: 400;
   font-style: normal;
  "
`;

exports[`should render SansRegular correctly for pidgin 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 400;
   font-style: normal;
  "
`;

exports[`should render SansRegular correctly for yoruba 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 400;
   font-style: normal;
  "
`;

exports[`should render SerifBold correctly for igbo 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifBold correctly for news 1`] = `
"
    font-family: ReithSerif, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifBold correctly for persian 1`] = `
"
    font-family: NassimPersian, Arial, Verdana, Geneva, Helvetica, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifBold correctly for pidgin 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifBold correctly for yoruba 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifMedium correctly for igbo 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifMedium correctly for news 1`] = `
"
   font-family: ReithSerif, Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-style: italic; 
  "
`;

exports[`should render SerifMedium correctly for persian 1`] = `
"
    font-family: NassimPersian, Arial, Verdana, Geneva, Helvetica, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifMedium correctly for pidgin 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifMedium correctly for yoruba 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifMediumItalic correctly for igbo 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: italic;
  "
`;

exports[`should render SerifMediumItalic correctly for news 1`] = `
"
   font-family: ReithSerif, Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-style: italic;
  "
`;

exports[`should render SerifMediumItalic correctly for persian 1`] = `
"
    font-family: NassimPersian, Arial, Verdana, Geneva, Helvetica, sans-serif;
    font-weight: 700;
   font-style: normal;
  "
`;

exports[`should render SerifMediumItalic correctly for pidgin 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: italic;
  "
`;

exports[`should render SerifMediumItalic correctly for yoruba 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 700;
   font-style: italic;
  "
`;

exports[`should render SerifRegular correctly for igbo 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 400;
   font-style: normal;
  "
`;

exports[`should render SerifRegular correctly for news 1`] = `
"
   font-family: ReithSerif, Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
  "
`;

exports[`should render SerifRegular correctly for persian 1`] = `
"
    font-family: NassimPersian, Arial, Verdana, Geneva, Helvetica, sans-serif;
    font-weight: 400;
   font-style: normal;
  "
`;

exports[`should render SerifRegular correctly for pidgin 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 400;
   font-style: normal;
  "
`;

exports[`should render SerifRegular correctly for yoruba 1`] = `
"
    font-family: Helmet, Freesans, Helvetica, Arial, sans-serif;
    font-weight: 400;
   font-style: normal;
  "
`;
